# nuxt-shadcn-tauri-dashboard

./: .gitignore  .nuxtignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETUP.md  PRESENTATION_GUIDE.md  PROJECT_OVERVIEW.md  PUBLISHING_GUIDE.md  README.md  eslint.config.js  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  uno.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
components/layout/: Header.vue
composables/: useCustomize.ts
constants/: menus.ts
pages/tauri/: filesystem.vue  interface.vue  notifications.vue  storage.vue  system.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: main.rs
